# finance-advisor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3ffcf08cb268_initial_schema.py  69336c3d2f2b_add_name_housing_financial_plan.py
backend/app/: config.py  logging_config.py  main.py
backend/app/models/: __init__.py  chat.py  goal.py  report.py  transaction.py  user.py
backend/app/routers/: auth.py  chat.py  goals.py  onboarding.py  profile.py  reports.py  transactions.py
backend/app/schemas/: auth.py  chat.py  goal.py  profile.py  report.py  transaction.py
backend/app/services/: advisor.py  agent.py  agent_tools.py  csv_parser.py
backend/app/utils/: auth.py  categories.py
backend/tests/: conftest.py  test_advisor.py  test_agent.py  test_agent_tools.py  test_auth.py  test_chat.py  test_goals.py  test_onboarding.py  test_profile.py  test_reports.py  test_transactions.py
docs/plans/: 2026-03-02-bootstrap-implementation.md  2026-03-02-finance-advisor-bootstrap-design.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AppLayout.tsx  AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  GoalsPage.tsx  LoginPage.tsx  OnboardingPage.tsx  RegisterPage.tsx  (+3 more)
